[package]
name = "energipris"
version = "0.1.0"
edition = "2021"
authors = ["Odin Standal"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON support
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rasciigraph = "0.2"