[package]
name = "energipris"
version ="0.1.0"
edition = "2021"
authors = ["Odin Standal"]
description = "Sjekk Tibbers energipriser fra kommandolinjen"
homepage = "https://github.com/Odinodin/energipris/"
repository = "https://github.com/Odinodin/energipris/"
documentation = "https://github.com/Odinodin/energipris/"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rasciigraph = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
